hackovid-tickets/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tickets
  namespace: tickets
  labels:
    app: tickets
spec:
  selector:
    app: tickets
  type: ClusterIP
  ports:
   - port: 8000
     name: http
